# rapidpro

./: .dockerignore  .gitignore  .npmrc  Dockerfile.patch  README.md  VERSION  VERSION_FlowEditor  code_check.py  custom-deps.toml  package-lock.json  package.json  pip-add-reqs.txt  pip-freeze.txt  pip-install.sh  pip-requires.txt  poetry-install.sh  pyproject.toml  rapidpro-compose.dev.yaml  rapidpro-compose.prod.yaml  rp-build-deps.sh  staticfile-hash-calc.sh  staticfiles-hash-calc.sh
.circleci/: config.yml
.github/workflows/: build-container-layer1.yml  build-container-layer2.yml  build-image-layer1.yml  build-image-layer2.yml  build-image-layer3.yml  build-image-layer4.yml  build-image-layer5.yml  build-image-result.yml  build-img1-os-layer.yml  build-img2-lib-layer.yml  build-img3-app-layer.yml  build-img4-engage-files.yml  build-img4-generic-files.yml  build-img5-engage.yml  build-img5-generic.yml  build-img6-nginx.yml  tag-release.yml  util-build-img1-os-layer.yml  util-docker-image-exists.yml
docker/: Dockerfile.base  Dockerfile.code  Dockerfile.engage  Dockerfile.generic  Dockerfile.jslibs  Dockerfile.pyapp  Dockerfile.pygeos  Dockerfile.pylibs  Dockerfile.rp  Dockerfile.rpapp  Dockerfile.uilibs  dfstage-base.dockerfile  dfstage-osgeo-gdal.dockerfile  dfstage-osgeo-geos.dockerfile  dfstage-osgeo-proj.dockerfile  dfstage-osgeo.dockerfile  dfstage-pyapp.dockerfile  dfstage-pyfiles.dockerfile  dfstage-pylibs.dockerfile  final-engage.dockerfile  final-generic.dockerfile  final-rp.dockerfile  geolibs.sh
docker/customizations/: startup.sh
docker/nginx/: nginx.app.conf.template  nginx.conf  nginx.dockerfile
docker/overrides/: db-init.sh  db-update.sh  settings-engage.py  settings-generic.py  settings-rp.py  startup.sh  web-static.sh
engage/: __init__.py  settings_collect_static.py  settings_engage.py
engage/api/: __init__.py  apps.py  exceptions.py  permissions.py  responses.py  serializers.py  support.py  urls.py  views.py
engage/archives/: __init__.py  apps.py  models.py
engage/assets/: apps.py  models.py
engage/auth/: __init__.py  account.py  apps.py  oauth.py  (+6 more)
scm/: app-version.sh  pr-comment.sh  pygeos_tag.txt  pylibs_tag.txt  src-refresh.sh  utils-angularjs.sh  utils-engage.sh  utils.sh
sitestaticz/: asset-manifest.json  index.html  precache-manifest.6eb6cb427b16c5ed9464e7492a251cc8.js  precache-manifest.8f0ab51f96b90e1896f6706b48b17ed8.js  service-worker.js
temba/: formax.py  middleware.py  settings_common.py  settings_compress_static.py  settings_engage.py  urls.py
templates/: frame.haml
workspace/: .env  docker-compose.yml  engage_initialsetup.py  nginx-server-locations.conf  nginx.conf  postgres-po-init.sh  postgres-rp-extensions.sh  uwsgi_conf.ini
(+530 files in other folders)
